# rust-graphql

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 001_init_db.sql  tern.conf
src/: db.rs  gql.rs  lib.rs  main.rs  server.rs  utils.rs
src/db/: user.rs
src/gql/: mutation.rs  query.rs  schema.rs  user.rs
