[package]
name = "graphql-demo"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
actix-cors = "0.5.4"
sqlx = { version = "0.4", features = ["postgres", "runtime-actix-rustls", "chrono"]}
async-graphql = "2.7.0"
async-graphql-actix-web = "2.7.0"
tokio = {version = "0.2"}
chrono = "0.4.19"
